reports/dist/run-full-bench-20260609-085346/ingress-controllers-nginx-ingress-snippet-annotations/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/configuration-snippet: |
        add_header X-Test "chart-test-swarm";
    creationTimestamp: "2026-06-09T13:52:51Z"
    generation: 1
    name: sample-snippet
    namespace: sample
    resourceVersion: "616"
    uid: b1013d7d-25a8-4572-8d72-22cb53f2f267
  spec:
    ingressClassName: nginx
    rules:
    - host: sample.test.local
      http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
